--- a/schools.html
+++ b/schools.html
@@ -11,54 +11,52 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
 
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "WebPage",
-    "name": "Private Schools - Community Website",
-    "url": "https://alladin077.github.io/Semantic2025/schools.html",
-    "description": "Explore featured private schools in Lexington, KY including The Lexington School Learning Center and Sayre School.",
-    "publisher": {
-      "@type": "Organization",
-      "name": "Community Website",
-      "url": "https://alladin077.github.io/Semantic2025"
-    },
-    "mainEntity": [
-      {
-        "@type": "EducationalOrganization",
-        "name": "The Lexington School Learning Center",
-        "address": "1050 Lane Allen Road, Lexington, KY 40504",
-        "telephone": "+1-859-278-0501",
-        "foundingDate": "1959",
-        "educationalLevel": "Preschool to 8th Grade",
-        "numberOfStudents": "558",
-        "studentToTeacherRatio": "7:1",
-        "offers": {
-          "@type": "Offer",
-          "price": "27000",
-          "priceCurrency": "USD",
-          "description": "Approximate tuition and fees"
-        }
+ <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Private Schools - Community Website",
+  "url": "https://alladin077.github.io/Semantic2025/schools.html",
+  "description": "Explore featured private schools in Lexington, KY including The Lexington School Learning Center and Sayre School.",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Community Website",
+    "url": "https://alladin077.github.io/Semantic2025"
+  },
+  "mainEntity": [
+    {
+      "@type": "EducationalOrganization",
+      "name": "The Lexington School Learning Center",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "1050 Lane Allen Road",
+        "addressLocality": "Lexington",
+        "addressRegion": "KY",
+        "postalCode": "40504",
+        "addressCountry": "US"
       },
-      {
-        "@type": "EducationalOrganization",
-        "name": "Sayre School",
-        "address": "194 North Limestone Street, Lexington, KY 40507",
-        "telephone": "+1-859-254-1361",
-        "foundingDate": "1854",
-        "educationalLevel": "Preschool to 12th Grade",
-        "numberOfStudents": "518",
-        "studentToTeacherRatio": "7:1",
-        "offers": {
-          "@type": "Offer",
-          "price": "4000-20370",
-          "priceCurrency": "USD",
-          "description": "Tuition range depending on grade level"
-        }
-      }
-    ]
-  }
-  </script>
+      "telephone": "+1-859-278-0501",
+      "foundingDate": "1959",
+      "description": "Independent school offering education from preschool to 8th grade with approximately 558 students and a 7:1 student-teacher ratio. Tuition is around $27,000."
+    },
+    {
+      "@type": "EducationalOrganization",
+      "name": "Sayre School",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "194 North Limestone Street",
+        "addressLocality": "Lexington",
+        "addressRegion": "KY",
+        "postalCode": "40507",
+        "addressCountry": "US"
+      },
+      "telephone": "+1-859-254-1361",
+      "foundingDate": "1854",
+      "description": "Independent school offering preschool through 12th grade. It has approximately 518 students with a 7:1 student-teacher ratio. Tuition ranges from $4,000 to $20,370."
+    }
+  ]
+}
+</script>
 </head>
 <body>
 
