--- a/index.html
+++ b/index.html
@@ -74,15 +74,21 @@
   </section>
 
   <section>
-    <h2>Explore Our Community Resources</h2>
-    <blockquote>
-      Strong communities are built on connections, shared spaces, and accessible resources for everyone.
-    </blockquote>
-    <div class="video-container">
-      <iframe width="600" height="350" src="https://www.youtube.com/embed/PsZjQXAGtlA?si=CrYGgd8PUQ7ED2iU" title="Best Things to do in Lexington" allowfullscreen></iframe>
-      <p>If the video doesn't load, <a href="https://www.youtube.com/watch?v=PsZjQXAGtlA">Watch the full video on YouTube</a>.</p>
-    </div>
-  </section>
+  <h2>Explore Our Community Resources</h2>
+  <blockquote>
+    Strong communities are built on connections, shared spaces, and accessible resources for everyone.
+  </blockquote>
+  <div class="video-container">
+    <iframe width="600" height="350" src="https://www.youtube.com/embed/PsZjQXAGtlA?si=CrYGgd8PUQ7ED2iU" title="Best Things to do in Lexington" allowfullscreen></iframe>
+    <p>
+      If the video doesn't load, 
+      <a href="https://www.youtube.com/watch?v=PsZjQXAGtlA">view the Lexington Attractions video on YouTube</a>.
+    </p>
+    <p>
+      <strong>Video Description:</strong> This video highlights popular attractions and activities in Lexington, KY. It features footage of horse farms, local dining spots, bourbon distilleries, historic downtown, and scenic countryside. The narration provides insights into Lexington’s culture, entertainment options, and welcoming community atmosphere.
+    </p>
+  </div>
+</section>
 
   <section>
     <h2>Things to Do</h2>
